[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mosquito"
version = "0.0.1"
dependencies = [
  "make87",
]
description = "A mosquito server"
readme = "README.md"
requires-python = ">=3.9,<3.13"


[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = []
